// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusDetail /> Matches different config of Full Status Detail Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage StatusDetail"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          class="ChapterIcon"
          fill="black"
        >
          burgerzaken.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/inkomen"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Inkomen
        </a>
        <h2
          class="Heading Heading__large"
        >
          Aanvraag Test item
        </h2>
      </div>
    </header>
    <div
      class="PageContent DetailPageContent"
    />
    <button
      aria-expanded="false"
      class="Button Button__plain Button__lean MoreStatus MoreStatusClosed"
    >
      <svg
        aria-hidden="true"
        class="Icon Icon__left"
        fill="#000"
        height="14px"
        width="14px"
      >
        Chevron-Left.svg
      </svg>
      Toon alles
    </button>
    <div
      class="StatusLine"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Test item-aanvraag
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                aanvraag
              </strong>
              <time
                class="StatusDate"
              >
                24 juli 2020
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  Uw aanvraag is binngekomen
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            >
              <ul
                class="DocumentList"
              >
                <li
                  class="DocumentListItem"
                >
                  <span
                    class="DocumentLinkWrap"
                  >
                    <span
                      class="DownloadIcon"
                    >
                      <svg
                        aria-hidden="true"
                        height="14"
                        width="14"
                      >
                        Download.svg
                      </svg>
                    </span>
                    <a
                      class="Button Button__plain Button__lean Linkd DocumentLink"
                      href="/api/v1/relay/mijnamsterdamapi/kappie"
                    >
                      Documentje
                    </a>
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--middle-checked-next"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                inbehandeling
              </strong>
              <time
                class="StatusDate"
              >
                28 juli 2020
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  Uw aanvraag is in behandeling
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
    <button
      aria-expanded="false"
      class="Button Button__plain Button__lean MoreStatus MoreStatusClosed"
    >
      <svg
        aria-hidden="true"
        class="Icon Icon__left"
        fill="#000"
        height="14px"
        width="14px"
      >
        Chevron-Left.svg
      </svg>
      Toon alles
    </button>
  </main>
</DocumentFragment>
`;

exports[`<StatusDetail /> Matches different config of Full Status Detail Page snapshot 2`] = `
<DocumentFragment>
  <main
    class="Page DetailPage StatusDetail"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          class="ChapterIcon"
          fill="black"
        >
          burgerzaken.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/inkomen"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Inkomen
        </a>
        <h2
          class="Heading Heading__large"
        >
          Aanvraag Test item
        </h2>
      </div>
    </header>
    <div
      class="PageContent DetailPageContent"
    />
    <button
      aria-expanded="true"
      class="Button Button__plain Button__lean MoreStatus"
    >
      <svg
        aria-hidden="true"
        class="Icon Icon__left"
        fill="#000"
        height="14px"
        width="14px"
      >
        Chevron-Left.svg
      </svg>
      Toon minder
    </button>
    <div
      class="StatusLine"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Test item-aanvraag
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                aanvraag
              </strong>
              <time
                class="StatusDate"
              >
                24 juli 2020
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  Uw aanvraag is binngekomen
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            >
              <ul
                class="DocumentList"
              >
                <li
                  class="DocumentListItem"
                >
                  <span
                    class="DocumentLinkWrap"
                  >
                    <span
                      class="DownloadIcon"
                    >
                      <svg
                        aria-hidden="true"
                        height="14"
                        width="14"
                      >
                        Download.svg
                      </svg>
                    </span>
                    <a
                      class="Button Button__plain Button__lean Linkd DocumentLink"
                      href="/api/v1/relay/mijnamsterdamapi/kappie"
                    >
                      Documentje
                    </a>
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--middle-checked-next"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                inbehandeling
              </strong>
              <time
                class="StatusDate"
              >
                28 juli 2020
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  Uw aanvraag is in behandeling
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
    <button
      aria-expanded="true"
      class="Button Button__plain Button__lean MoreStatus"
    >
      <svg
        aria-hidden="true"
        class="Icon Icon__left"
        fill="#000"
        height="14px"
        width="14px"
      >
        Chevron-Left.svg
      </svg>
      Toon minder
    </button>
  </main>
</DocumentFragment>
`;

exports[`<StatusDetail /> Matches the Full Status Detail Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage StatusDetail"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          class="ChapterIcon"
          fill="black"
        >
          burgerzaken.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/inkomen"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Inkomen
        </a>
        <h2
          class="Heading Heading__large"
        >
          Aanvraag Test item
        </h2>
      </div>
    </header>
    <div
      class="PageContent DetailPageContent"
    >
      <p>
        This text will appear. Aanvraag Test item
      </p>
    </div>
    <div
      class="StatusLine"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Test item-aanvraag
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                aanvraag
              </strong>
              <time
                class="StatusDate"
              >
                24 juli 2020
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  Uw aanvraag is binngekomen
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            >
              <ul
                class="DocumentList"
              >
                <li
                  class="DocumentListItem"
                >
                  <span
                    class="DocumentLinkWrap"
                  >
                    <span
                      class="DownloadIcon"
                    >
                      <svg
                        aria-hidden="true"
                        height="14"
                        width="14"
                      >
                        Download.svg
                      </svg>
                    </span>
                    <a
                      class="Button Button__plain Button__lean Linkd DocumentLink"
                      href="/api/v1/relay/mijnamsterdamapi/kappie"
                    >
                      Documentje
                    </a>
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="ListItem"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                inbehandeling
              </strong>
              <time
                class="StatusDate"
              >
                28 juli 2020
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  Uw aanvraag is in behandeling
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;
